Faltando apenas o requisito 21 Materias

--- a/style.css
+++ b/style.css
@@ -47,3 +47,12 @@ main {
 #agree {
   display: flex;
 }
+
+#form-data {
+  border: 2px solid red;
+  flex-direction: column;
+}
+
+#nome {
+  display: flex;
+}
